# Rovah

./: .gitignore  README.md  Task_Document.md
Category 1/Teensy_GPS/: platformio.ini
Category 1/Teensy_GPS/src/: main.cpp
Category3/: dashboard_ui.py  ground-control.target  log.txt  ros2-bridge.service  ros2_bridge.py  telemetry.service  telemetry_logger.py
meshes/: base_link.stl  component__10__1.stl  component__11__1.stl  component__12__1.stl  component__13__1.stl  component__14__1.stl  component__1__1.stl  component__2__1.stl  component__3__1.stl  component__4__1.stl  component__5__1.stl  component__6__1.stl  component__7__1.stl  component__8__1.stl  component__9__1.stl  meshes
models/low_moon/: model.sdf
src/mini_model_control/: package.xml  setup.cfg  setup.py
src/mini_model_control/config/: rover_controllers.yaml
src/mini_model_description/: package.xml  setup.cfg  setup.py
src/mini_model_description/launch/: display.launch.py  mini_model.launch.py  spawn_gazebo.launch.py
src/mini_model_description/mini_model_description/: odom_publisher.py  tf_broadcaster.py
src/mini_model_description/rviz/: mini_model.rviz
src/mini_model_description/urdf/: mini_model.urdf  mini_model.xacro  mini_model_ignition.urdf  mini_model_ignition.xacro
urdf/: materials.xacro  mini_model.gazebo  mini_model.ignition.gazebo  mini_model.trans  mini_model.xacro  mini_model_ignition.xacro  sensors.gazebo  sensors.xacro
worlds/: forest.sdf  forest.world  mars.sdf  moon.sdf
